@@ -29,6 +29,8 @@ Version 414   ???
 --Fixed so that we have separate AHAP URL settings files for all of our
   auxillary servers, as accessed by the client.
 
+--Updated rootAddNewDownloadServer.sh to handle AHAP downloads.
+
 
 
 
